Load 98.css in parent component to avoid flicker

--- a/src/components/Folio/Subtitle/Subtitle.scss
+++ b/src/components/Folio/Subtitle/Subtitle.scss
@@ -8,6 +8,8 @@
     background: rgba($color: #000000, $alpha: 0.7);
     padding: 10px 130px;
     min-width: 60%;
+    cursor: pointer;
+
     &.show {
         display: block;
     }
